# file-manager

./: .env.example  .gitignore  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  firestore.py  main.py  schemas.py  settings.py  storage.py  utils.py
backend/tests/: conftest.py  test_files.py
frontend/: .dockerignore  .firebaserc  Dockerfile  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  firebase.ts  main.tsx  toast.tsx  toastStore.ts  usePrefs.ts
